--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div>
         Il était une fois un jedi dans l'espace !!
     </div>
+    <div>
+        Et voila un vaisseau
+    </div>
 </body>
 </html>
